# eva_59

./: .env.example  .gitignore  README.md  pyproject.toml  raspbot2.0  raspisanie  raspisanie2  raspisanieBotFinale
.github/workflows/: main.py
src/: __main__.py
src/core/: settings.py
src/core/v1/: raspisanieBotFinale.py
src/core/v2/: Buttons.py  buttons.py  consts.py  raspbot_2_0.py  schedule.py  utils.py
