[tool.poetry]
name = "eva-59"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "eva_59"}]

[tool.poetry.dependencies]
python = "^3.9"
pyTelegramBotAPI = "^4.10.0"
pydantic = "^1.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
