[tool.poetry]
name = "eva-59"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
pyTelegramBotAPI = "^4.10.0"
pydantic = { extras = ["dotenv"], version = "^1.10.1" }

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
flake8 = "^6.0.0"
mypy = "^1.0.0"
rope = "^1.7.0"
bandit = "^1.7.4"
python-dateutil = "^2.8.2"
tqdm = "^4.64.1"
isort = "^5.12.0"
flake8-eradicate = "^1.4.0"
flake8-print = "^5.0.0"
flake8-use-fstring = "^1.4"

[tool.pylint]
extension-pkg-whitelist = ["orjson"]

[tool.pylint.messages_control]
disable = [
    "relative-beyond-top-level",
    "format", # handled by black
    "invalid-name",
    "missing-function-docstring",
    "missing-module-docstring"
]

[tool.bandit]
skips = ["B601", "B104"]

[tool.black]
py36 = true
include = '.pyi?$'
exclude = '''
/(
    .git
  | .hg
  | .mypy_cache
  | .pytest_cache
  | .vscode
  | .tox
  | .venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
flake8-eradicate = "^1.0.0"
flake8-print = "^4.0.0"
flake8-use-fstring = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
